[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui.gd" type="Script" id=1]
[ext_resource path="res://images/ui/bg.png" type="Texture" id=2]
[ext_resource path="res://images/ui/alarm_bar_under.png" type="Texture" id=3]
[ext_resource path="res://images/ui/alarm_bar_over.png" type="Texture" id=4]
[ext_resource path="res://images/ui/alarm_bar_progress.png" type="Texture" id=5]

[node name="ui" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script = ExtResource( 1 )

[node name="pane" type="TextureRect" parent="."]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="alarmLevel" type="TextureProgress" parent="pane"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 81.0
margin_right = 166.0
margin_bottom = 105.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false

[node name="labelAlarmLevel" type="Label" parent="pane/alarmLevel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = -17.0
margin_right = 77.0
margin_bottom = -3.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Alarm Level"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="labelMetalAmount" type="Label" parent="pane"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 19.0
margin_top = 119.0
margin_right = 107.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Metal carried:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="metalAmount" type="Label" parent="pane/labelMetalAmount"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 91.0
margin_right = 131.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0 kg"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


